frontend/src/app/components/home/notes-container/note-list-container/note-list-container.component.scss
@use "../../../../../styles.scss" as styles;

:host {
  width: 51%;
}

.plus-icon {
  position: absolute;
  top: 7.5%;
  right: 2.5%;
  transform: translateY(-50%);
  font-size: 18px;
}

.list-container {
  width: 100%;
  height: 100%;
  position: relative;

  .list-inner-container {
    width: 100%;
    height: 100%;
    position: relative;

    .list-inner-header {
      width: 95%;
      height: 15%;
      @include styles.displayFlex(row, center, space-between);
      margin: 0 auto;

      .notes-length {
        span {
          font-size: 25px;
          color: white;
        }

        .fa-signature {
          margin-left: 3px;
          color: #72767d;
        }
      }

      .inner-date span {
        &:nth-child(1) {
          color: #72767d;
        }
        &:nth-child(2) {
          color: white;
        }
      }

      .inner-header-actions i {
        margin-left: 20px;
      }

      .input-container {
        width: 50%;
        height: 70%;
        background-color: #40444b;
        border-radius: styles.$smallBorderRadius;
        @include styles.displayFlex(row, center, center);

        input {
          width: 85%;
          height: 100%;
          border-radius: styles.$smallBorderRadius 0 0 styles.$smallBorderRadius;
        }

        div {
          flex: 1;
          height: 100%;
          padding-right: 5px;
          @include styles.displayFlex(row, center, flex-end);
        }
      }
    }

    .lists {
      width: 100%;
      height: 85%;
      padding: 15px 0;
      position: relative;
      overflow-y: auto;
      overflow-x: hidden;

      .list-item {
        width: 95%;
        padding: 2px 6px;
        // background-color: #32353b;
        background-color: #2f3136;
        border-radius: styles.$smallBorderRadius;
        position: relative;
        margin: 0 auto;
        box-shadow: 0 0 3px rgba(0, 0, 0, 0.08);
        @include styles.displayFlex(row, center, center);

        &:not(:last-child) {
          margin-bottom: 10px;
        }

        &:active {
          filter: brightness(1.2);
        }

        &::before {
          content: "";
          position: absolute;
          top: 0;
          left: 0;
          width: 200%;
          height: 100%;
          transform: translateX(-25%);
          z-index: -1;
        }

        .list-item-p {
          flex: 1;
          height: 100%;
          overflow: hidden;
          min-height: 6vh;
          max-height: 10vh;
          transition: 0.2s width;
          cursor: pointer;

          .date {
            position: absolute;
            top: 50%;
            left: 2px;
            transform: translate(-50%, -50%) rotate(-90deg);
            font-weight: 900;
            color: #63676d;
            font-size: 14px;
            opacity: 0;
            transition: 0.3s opacity, 0.4s left;
            cursor: auto;
          }

          p {
            color: white;
            text-align: justify;
            white-space: nowrap;
            text-overflow: ellipsis;
            overflow: hidden;
          }
        }

        .list-control {
          width: 0;
          height: 31px;
          @include styles.displayFlex(row, center, center);
          transition: 0.1s width, 0.2s opacity;
          opacity: 0;
          pointer-events: none;
          font-size: 19px;
        }

        &:hover {
          .list-item-p {
            .date {
              opacity: 1;
              left: -6px;
            }
          }
          .list-control {
            width: 25px;
            opacity: 1;
            pointer-events: auto;
            margin-left: 10px;
          }
        }
      }

      &.open-note-list {
        padding-top: 0;
        @include styles.displayFlex(column, center, center);

        .open-note-textarea {
          width: 95%;
          height: 100%;
        }
      }
    }
  }
}

.empty-list {
  width: 100%;
  height: 100%;
  position: relative;
  @include styles.displayFlex(column, center, center);

  h4 {
    letter-spacing: 0.7px;
    color: #72767d;
  }

  & > p {
    color: styles.$fadeText;
  }
}

.share-modal-body {
  padding: 4px;
  @include styles.displayFlex(column, center, space-around);

  & > div {
    width: 98%;
    border-radius: styles.$smallBorderRadius;
  }

  .share-details {
    height: 15%;
    padding: 0 8px;
    background-color: #1f2024;
    @include styles.displayFlex(row, center, space-between);

    .share-iconn {
      width: 10%;
      height: 90%;
      margin-right: 8px;
      @include styles.displayFlex(column, center, center);

      i {
        font-size: 37px;
        color: styles.$itemNormal;
      }
    }

    .share-info {
      flex: 1;
      height: 90%;
      overflow: hidden;
      @include styles.displayFlex(column, flex-start, center);

      p:nth-child(2) {
        color: #72767d;
      }
      p:nth-child(1) {
        color: white;
      }
    }
  }

  .shared-main {
    height: 70%;
    padding: 8px;
    background-color: #1f2024;
    border-radius: styles.$smallBorderRadius;
    @include styles.displayFlex(column, center, space-between);

    .share-search {
      width: 100%;
      height: 22%;
      @include styles.displayFlex(column, center, center);

      .search-input {
        width: 100%;
        height: 90%;
        background-color: #40444b;
        border-radius: styles.$smallBorderRadius;
        @include styles.displayFlex(row, center, center);

        input {
          flex: 1;
          height: 100%;
          border-radius: styles.$smallBorderRadius 0 0 styles.$smallBorderRadius;
        }

        i {
          width: 10%;
          height: 100%;
          margin: 0 5px;
          @include styles.displayFlex(row, center, flex-end);
        }
      }

      .search-error {
        width: 100%;
        margin-top: 4px;
        color: styles.$invalidColor;
      }

      .search-found {
        width: 100%;
        margin-top: 4px;
        color: styles.$validColor;
      }
    }

    .selected-users {
      width: 100%;
      height: 70%;
      overflow-y: auto;
      position: relative;

      & > p {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        color: styles.$fadeText;
      }
    }

    .shared-lists {
      width: 100%;
      height: 35px;
      background-color: styles.$containers;
      margin-bottom: 10px;
      border-radius: styles.$smallBorderRadius;
      @include styles.displayFlex(row, center, center);

      .fa-user {
        margin: 0 15px 0 8px;
        color: styles.$itemNormal;
      }

      p {
        flex: 1;
        color: white;
      }

      .fa-times-circle {
        margin: 8px;
      }
    }
  }

  .share-actions {
    height: 10%;
    @include styles.displayFlex(row, center, flex-end);

    button {
      margin-left: 20px;
      padding: 6px 10px;

      &:nth-child(2) {
        background-color: styles.$btnColor;
      }
    }
  }
}

@media all and (max-width: 780px) {
  .date {
    left: -7px !important;
    opacity: 1 !important;
  }
  .list-control {
    opacity: 1 !important;
    width: 7% !important;
    transform: translateX(0px) !important;
    margin-left: 10px;
  }
  .input-container {
    height: 95% !important;
    margin-top: 5px;
  }
}

@media all and (max-width: 565px) {
  .list-inner-header,
  .list-item,
  .open-note-textarea {
    width: 92% !important;
  }
  .plus-icon {
    right: 4%;
  }
}

